--- a/pom.xml
+++ b/pom.xml
@@ -82,10 +82,6 @@
                 <updatePolicy>daily</updatePolicy>
             </snapshots>
         </repository>
-        <repository> <!-- Still used by HolographicDisplays - HD-APIv2 has been removed from old namespace on codemc-repo -->
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
     </repositories>
 
     <dependencies>
@@ -119,9 +115,9 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
-            <groupId>com.github.filoghost.HolographicDisplays</groupId>
+            <groupId>me.filoghost.holographicdisplays</groupId>
             <artifactId>holographicdisplays-api</artifactId>
-            <version>2.4.9</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
